config: Ignore i915 gvt guest udev events to avoid crashing

i915 sends drm udev events for gvt guests. X running on the host should
ignore these events. Currently, the events are treated as actual device
add/remove when no such event occurred which causes a crash.

Fixes: https://gitlab.freedesktop.org/xorg/xserver/-/issues/1386
Signed-off-by: Wenli Looi <wlooi@ucalgary.ca>